[build-system]
requires = [
"setuptools>=61.0",
"build>=0.8.0",
"matplotlib>=3.5.1",
"numpy>=1.21.2",
"Pillow>=9.2.0",
"pywin32>=304",
"tkcalendar>=1.6.1",
"overrides>=7.3.1"
]
build-backend = "setuptools.build_meta"

[project]
name = "rapidTk"
version = "0.0.2"
authors = [
  { name="Scott Paterson", email="scott_j_paterson@hotmail.co.uk" },
]
description = "A wrapper for quickly creating Tkinter code"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.0"
classifiers = [
    "Programming Language :: Python :: 3",
	"License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
]
[project.urls]
"Homepage" = "https://github.com/AceScottie/RapidTk"